k8s/payments-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-api
  labels:
    app: payments-api
spec:
  type: ClusterIP
  selector:
    app: payments-api
  ports:
    - name: http
      port: 80
      targetPort: 80
